[package]
name = "pg-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0"
dotenv = "0.15"
regex = "1.5"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
